[project]
name = "mongo_emb"
version = "1.0.0"
authors = [
    { name="Wang Qi", email="wangmarkqi@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]


[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
#python-source = "mypy"
#module-name = "mongo_emb.pymongo_emb"
features = ["pyo3/extension-module"]
cargo-extra-args = "--release"

#pip install ziglang
#pyhon -m build
#maturin publish
#rustup target add x86_64-unknown-linux-musl
#maturin build --release  --target  x86_64-unknown-linux-musl --zig